flapivor/tests/m3/hopix/typechecker/bad/59-assignment.hopix
val r : Ref<Int> = ref 0

val main : Unit = r := "Wrong"

